# mephisto-emu

./: .gitignore  Cargo.toml  README.md  TODO.md  start.sh  start_dbg.sh
src/: emu.rs  main.rs  uci.rs  utils.rs
